Optuna Hyperparameter optimization with visualization

--- a/IntentClassifier_Optuna_Mlflow.ipynb
+++ b/IntentClassifier_Optuna_Mlflow.ipynb
@@ -1,13 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "#    Hyperparameter Tuning for Intent Classification using LSTM with Attention Mechanism\n",
+    "This notebook is a part of the Ultimate AI Challenge. In this notebook, we train a LSTM with Attention Mechanism for Intent Classification on the ATIS dataset. We use Optuna for hyperparameter tuning and MLflow for experiment tracking and model registry. We also use ONNX for model export and inference. The notebook is divided into the following sections:\n",
+    "1. Data Preparation\n",
+    "2. Hyperparameter Tuning\n",
+    "3. Model Training and Evaluation\n",
+    "4. Visualize the results\n",
+    "5. Model Export, Registry, Model Loading and Inference\n"
+   ],
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -36,6 +42,20 @@
      "end_time": "2023-11-21T19:21:45.780052Z",
      "start_time": "2023-11-21T19:21:43.708770Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Data Preparation\n",
+    "Steps:\n",
+    "1. Load the data\n",
+    "2. Tokenize the data\n",
+    "3. Create a PyTorch Dataset\n",
+    "4. Create a PyTorch DataLoader"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -91,7 +111,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Visualize the data\n",
+    "print(\"Sample training data:\")\n",
+    "print(train_data.tensors[0][:5])\n",
+    "\n",
+    "# Plot the class distribution ins test and train\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "train_df.label.value_counts().plot(kind='bar', ax=ax1)\n",
+    "ax1.set_title(\"Train\")\n",
+    "test_df.label.value_counts().plot(kind='bar', ax=ax2)\n",
+    "ax2.set_title(\"Test\")\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Hyperparameter Tuning\n",
+    "The Model that we are using for the hyperparameter tuning is the IntentClassifierLSTMWithAttention. The hyperparameters that we are tuning are:\n",
+    "1. Learning rate : 1e-3 to 1e-1\n",
+    "2. Hidden dimension : 32, 64, 128, 256\n",
+    "3. Embedding dimension : 64, 128, 256, 512\n",
+    "4. Dropout rate : 0.1 to 0.5\n",
+    "5. Weight decay : 1e-6 to 1e-3\n",
+    "\n",
+    "The objective function is the average validation accuracy over 5 folds. The best model is the one with the highest average validation accuracy."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def log_hyperparameters(trial):\n",
@@ -106,25 +164,10 @@
     "def log_metrics(trial, accuracy):\n",
     "    # Log metrics\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
-    "    return"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-21T19:26:40.589504Z",
-     "start_time": "2023-11-21T19:26:40.562857Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
+    "    return\n",
     "def objective(trial):\n",
     "    with mlflow.start_run():\n",
     "        # Suggest hyperparameters\n",
-    "\n",
     "        lr = trial.suggest_float(\"lr\", 1e-3, 1e-1, log=True)\n",
     "        hidden_dim = trial.suggest_categorical(\"hidden_dim\", [32, 64, 128, 256])\n",
     "        embedding_dim = trial.suggest_categorical(\"embedding_dim\", [64, 128, 256, 512])\n",
@@ -160,6 +203,16 @@
      "end_time": "2023-11-21T19:49:36.148531Z",
      "start_time": "2023-11-21T19:49:36.143757Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Optuna Experiments\n",
+    "Create an experiment in MLflow and run the hyperparameter tuning experiment. The best model is the one with the highest average validation accuracy."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -290,6 +343,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Best Model Training and Evaluation\n",
+    "Tune the best model with a larger number of epochs and evaluate it on the test set."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "outputs": [
@@ -337,6 +400,29 @@
      "end_time": "2023-11-21T19:49:16.225189Z",
      "start_time": "2023-11-21T19:49:01.136298Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Visualize the results\n",
+    "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. We can use these visualizations to analyze the results of the hyperparameter tuning experiment."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Visualize the optimization history\n",
+    "fig = plot_optimization_history(study)\n",
+    "fig.show()"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
