Optuna Hyperparameter optimization with visualization

--- a/Hyperparameter Optimization.ipynb
+++ b/Hyperparameter Optimization.ipynb
@@ -819,27 +819,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/2001156890.py:3: ExperimentalWarning:\n",
+      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/4292849980.py:2: ExperimentalWarning:\n",
       "\n",
       "plot_optimization_history is experimental (supported from v2.2.0). The interface can change in the future.\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Axes' object has no attribute 'show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[14], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01moptuna\u001B[39;00m\n\u001B[1;32m      3\u001B[0m fig \u001B[38;5;241m=\u001B[39m optuna\u001B[38;5;241m.\u001B[39mvisualization\u001B[38;5;241m.\u001B[39mmatplotlib\u001B[38;5;241m.\u001B[39mplot_optimization_history(study)\n\u001B[0;32m----> 4\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Axes' object has no attribute 'show'"
      ]
     },
     {
@@ -853,41 +842,28 @@
    ],
    "source": [
     "# Visualize the optimization history\n",
-    "import optuna\n",
-    "fig = optuna.visualization.matplotlib.plot_optimization_history(study)\n",
-    "fig.show()\n"
+    "fig = optuna.visualization.matplotlib.plot_optimization_history(study)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T21:40:34.528999Z",
-     "start_time": "2023-11-21T21:40:34.225884Z"
+     "end_time": "2023-11-21T21:45:43.324794Z",
+     "start_time": "2023-11-21T21:45:43.205621Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/2546574690.py:1: ExperimentalWarning:\n",
+      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/3271138349.py:1: ExperimentalWarning:\n",
       "\n",
       "plot_parallel_coordinate is experimental (supported from v2.2.0). The interface can change in the future.\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Axes' object has no attribute 'show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[15], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m fig \u001B[38;5;241m=\u001B[39m optuna\u001B[38;5;241m.\u001B[39mvisualization\u001B[38;5;241m.\u001B[39mmatplotlib\u001B[38;5;241m.\u001B[39mplot_parallel_coordinate(study)\n\u001B[0;32m----> 2\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Axes' object has no attribute 'show'"
      ]
     },
     {
@@ -900,40 +876,28 @@
     }
    ],
    "source": [
-    "fig = optuna.visualization.matplotlib.plot_parallel_coordinate(study)\n",
-    "fig.show()\n"
+    "fig=optuna.visualization.matplotlib.plot_parallel_coordinate(study)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T21:41:02.015427Z",
-     "start_time": "2023-11-21T21:41:01.541687Z"
+     "end_time": "2023-11-21T21:45:05.515330Z",
+     "start_time": "2023-11-21T21:45:05.166108Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/3378408086.py:1: ExperimentalWarning:\n",
+      "/var/folders/jk/m7rkkh0s0hjbspb28jt26mlw0000gn/T/ipykernel_12170/3712090538.py:1: ExperimentalWarning:\n",
       "\n",
       "plot_contour is experimental (supported from v2.2.0). The interface can change in the future.\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[16], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m fig \u001B[38;5;241m=\u001B[39m optuna\u001B[38;5;241m.\u001B[39mvisualization\u001B[38;5;241m.\u001B[39mmatplotlib\u001B[38;5;241m.\u001B[39mplot_contour(study)\n\u001B[0;32m----> 2\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'show'"
      ]
     },
     {
@@ -946,14 +910,13 @@
     }
    ],
    "source": [
-    "fig = optuna.visualization.matplotlib.plot_contour(study)\n",
-    "fig.show()"
+    "fig = optuna.visualization.matplotlib.plot_contour(study)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T21:41:11.430875Z",
-     "start_time": "2023-11-21T21:41:06.898353Z"
+     "end_time": "2023-11-21T21:42:29.767571Z",
+     "start_time": "2023-11-21T21:42:25.713831Z"
     }
    }
   },
