Optuna Hyperparameter optimization with visualization, model serving

--- a/Hyperparameter Optimization.ipynb
+++ b/Hyperparameter Optimization.ipynb
@@ -777,8 +777,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Visualize the results\n",
-    "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. We can use these visualizations to analyze the results of the hyperparameter tuning experiment."
+    "## Save the model and check model Serving"
    ],
    "metadata": {
     "collapsed": false
@@ -815,6 +814,16 @@
      "end_time": "2023-11-21T21:36:34.445387Z",
      "start_time": "2023-11-21T21:36:34.385347Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Visualize the results\n",
+    "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. We can use these visualizations to analyze the results of the hyperparameter tuning experiment."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
