removing models from git

--- a/Base Model Bert.ipynb
+++ b/Base Model Bert.ipynb
@@ -59,12 +59,14 @@
     "from transformers import Trainer, TrainingArguments\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torch\n",
-    "import config as cfg\n",
+    "import config_bert as cfg\n",
     "import warnings\n",
     "from transformers import TrainerCallback\n",
     "from machine_learning.model_utils import get_or_create_experiment\n",
+    "from machine_learning.IntentTokenizer import IntentTokenizer\n",
     "import mlflow\n",
     "import mlflow.pytorch\n",
+    "import pandas as pd\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
@@ -158,12 +160,12 @@
     "        return len(self.labels)\n",
     "\n",
     "# Load data\n",
-    "train = cfg.train\n",
-    "test = cfg.test\n",
+    "train_df = pd.read_csv('data/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "test_df = pd.read_csv('data/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
     "\n",
     "# Assume the second column is the label and the first column is the text\n",
-    "train_texts = train[0].tolist()\n",
-    "test_texts = test[0].tolist()\n",
+    "train_texts = train_df[\"text\"].tolist()\n",
+    "test_texts = test_df[\"text\"].tolist()\n",
     "\n",
     "# Convert labels to integer (if they are not already)\n",
     "# This might involve using a LabelEncoder as you have categorical labels\n",
@@ -305,10 +307,11 @@
     "    per_device_train_batch_size=16,  # batch size per device during training\n",
     "    per_device_eval_batch_size=64,   # batch size for evaluation\n",
     "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "    weight_decay=0.01,               # strength of weight decay\n",
+    "    weight_decay=1e-5,               # strength of weight decay\n",
     "    logging_dir='./logs',  \n",
     "    logging_strategy=\"steps\",  # or \"epoch\"\n",
-    "    logging_steps=50  # Log every 10 steps# directory for storing logs,\n",
+    "    logging_steps=50,  # Log every 10 steps# directory for storing logs,\n",
+    "    save_strategy=\"no\"\n",
     ")\n",
     "\n",
     "class MLflowLoggingCallback(TrainerCallback):\n",
