--- a/Hyperparameter Optimization.ipynb
+++ b/Hyperparameter Optimization.ipynb
@@ -20,26 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "ExecuteTime": {
-     "end_time": "2023-11-22T15:11:35.351927Z",
-     "start_time": "2023-11-22T15:11:35.345151Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from sklearn.model_selection import KFold\n",
