finish studying hyper paramter story

--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -957,8 +957,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can make very nice conclusions about embedding dimensions and hidden dimmesions along with other dimensions and even restart the study from here. For \n",
+    "1. Embedding dimension is ideal somewhere between 100 and 300\n",
+    "2. Hidden dimension is ideal between 50 50 100\n",
+    "3. learning rate between 0.001 and 0.0001.\n",
+    "4. dropout rate between 0.3 to 0.4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "is_executing": true,
@@ -1009,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "is_executing": true,
@@ -1026,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "is_executing": true,
