--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -1066,6 +1066,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next Step for model improvements\n",
+    "\n",
+    "Visualize the impact of Attentions and Embeddings\n",
+    "One can visualize how attention and embeddings are playing but in the interest of time, we leave it to laters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
