finished notebooks story

--- a/3. Model Evaluation.ipynb
+++ b/3. Model Evaluation.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "source": [
     "# Evaluation and Serving of the LSTM with Attention, Improved Performance in Production and Edge Cases\n",
-    "This notebook is part 3 of the series, Ultimate-ai-challenge. After tuning hyperparameters in part 2, we demonstrate the process of evaluating, and serving an LSTM model with attention for intent classification on the ATIS dataset. We evaluate the model using different metrics \n",
+    "This notebook is part 3 of the series, Ultimate-ai-challenge. After tuning hyperparameters in part 2, I demonstrate the process of evaluating, and serving an LSTM model with attention for intent classification on the ATIS dataset. I evaluate the model using different metrics \n",
     "1. Accuracy\n",
     "2. Precision\n",
     "3. Recall\n",
     "4. Support\n",
     "5. ROC curve, confusion matrix, classification report, etc..\n",
     "\n",
-    "One of the critical outcomes of this work how do we measure performance during production and then take improvement measures.\n",
+    "One of the critical outcomes of this work how do I measure performance during production and then take improvement measures.\n",
     "## Improving model performace in production and handling edge cases \n",
-    "also add some test/edge cases to show that how the model performance can be improved in production or how the out-of-sample detection can be made better. There can be many strategies to check the model performance in production. However we only work on two\n",
+    "also add some test/edge cases to show that how the model performance can be improved in production or how the out-of-sample detection can be made better. There can be many strategies to check the model performance in production. However I only work on two\n",
     "### 1. Confidence Scores\n",
     "### 2. Out-of-Sample Detection\n",
     "\n",
@@ -594,7 +594,7 @@
     "Bayesian Neural Networks: Implement models that can estimate their own uncertainty. High uncertainty can be a signal for OOD data.\n",
     "Ensemble Methods: Use an ensemble of models and consider variance in their predictions as a measure of uncertainty.\n",
     "\n",
-    "#### We created two Out-of-Sample files ood.tsv and ood_test.csv by asking chatgpt to include some edge cases. Their purpose will become clear later on"
+    "#### I created two Out-of-Sample files ood.tsv and ood_test.csv by asking chatgpt to include some edge cases. Their purpose will become clear later on"
    ]
   },
   {
@@ -762,7 +762,7 @@
    "metadata": {},
    "source": [
     "### Improving the model by adding an on ood_sample in the training data\n",
-    "The output above shows very worrying picture, the whole out of sample data is labelled according to known class. Therefore to make the out-of-sample detection better, we generate some fake training data for out of sample using chatgpt and add it to the training data to get ood detection better. This is akin to fine tuning with additional data in the training data."
+    "The output above shows very worrying picture, the whole out of sample data is labelled according to known class. Therefore to make the out-of-sample detection better, I generate some fake training data for out of sample using chatgpt and add it to the training data to get ood detection better. This is akin to fine tuning with additional data in the training data."
    ]
   },
   {
@@ -870,7 +870,7 @@
    "id": "4898171e-81f7-4b77-8bf9-a432cc62d601",
    "metadata": {},
    "source": [
-    "### OOS test file is still unseen from the model. We check confidence scores on performance on it\n",
+    "### OOS test file is still unseen from the model. I check confidence scores on performance on it\n",
     "\n",
     "As you can see the confidence score and performance has improved a lot in the following analysis"
    ]
@@ -1034,7 +1034,7 @@
    "id": "2afe943e-6183-4759-abc6-6b2f86e2b103",
    "metadata": {},
    "source": [
-    "***The Performance is much improved on the unseen data now. We touch LLM fine tuning here :)***"
+    "***The Performance is much improved on the unseen data now. I touch LLM fine tuning here :)***"
    ]
   },
   {
