--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -17,7 +17,7 @@
     "2. Building a Transformer like Interface for Models (Own Tokenizer and Model Abstraction), with traine, eval and predict functions that can be used to trained any model.\n",
     "\n",
     "## Transformer, Bert's Intent Classification\n",
-    "I trained and fine tuned a language model with Attention Mechanism previously. However, we have not made it generalized. Let's use Hugging face transformers. \n",
+    "I trained and fine tuned a language model with Attention Mechanism previously. However, I have not made it generalized. Let's use Hugging face transformers. \n",
     "An example Intent Classification model using BERT and HuggingFace Transformers.\n",
     "Steps:\n",
     "1. Load data\n",
@@ -81,7 +81,7 @@
    },
    "source": [
     " ## Data Loading\n",
-    "We will use the [ATIS dataset](https://www.kaggle.com/siddhadev/atis-dataset-from-ms-cntk) from Kaggle. This dataset contains 5,047 sentences belonging to 26 intents. The sentences are queries from the ATIS (Airline Travel Information System) domain, and the intents are things like \"atis_flight\", \"atis_airfare\", \"atis_ground_service\", etc. The dataset is split into a training set and a test set. We will use the training set to train the model and the test set to evaluate the model. We will use the pretrained Bert tokenizer and model from HuggingFace. The tokenizer will convert the text into tokens that the model can understand. The model will be trained to classify the intent of the text. We will use the BertForSequenceClassification model, which is a pretrained Bert model with a single linear classification layer on top. This model can be used for sequence classification tasks like ours."
+    "The dataset contains 5,047 sentences belonging to 26 intents (it is ATIS from Kaggle). The sentences are queries from the ATIS (Airline Travel Information System) domain, and the intents are things like \"atis_flight\", \"atis_airfare\", \"atis_ground_service\", etc. The dataset is split into a training set and a test set. I will use the training set to train the model and the test set to evaluate the model. I will use the pretrained Bert tokenizer and model from HuggingFace. The tokenizer will convert the text into tokens that the model can understand. The model will be trained to classify the intent of the text. I will use the BertForSequenceClassification model, which is a pretrained Bert model with a single linear classification layer on top. This model can be used for sequence classification tasks like ours."
    ]
   },
   {
