finished notebooks story

--- a/1.Simple Model Training.ipynb
+++ b/1.Simple Model Training.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
-    "The process of getting a language agnostic representation of text is called tokenization. In this section, I will tokenize the text and build a vocabulary. I will also encode the labels as numerical values. This will help build an intent classifier model that an be used for chatbots in any domain and language\n",
+    "In this section, I will tokenize the text and build a vocabulary. I will also encode the labels as numerical values. This will help build an intent classifier model that an be used for chatbots in any domain and language\n",
     "1. Tokenize and Build Vocabulary\n",
     "2. Get the Indexed and Padded Sequences as Tensors\n",
     "\n",
@@ -97,9 +97,6 @@
     "\n",
     "### Text to Index Lists\n",
     "The text_to_indices function takes a string of text and the word_to_index dictionary.\n",
-    "It tokenizes the text into words (using the tokenize function assumed earlier).\n",
-    "For each word in the tokenized text, it finds the corresponding index from the word_to_index dictionary. If the word is not found, it uses the index for \"<UNK>\".\n",
-    "The function returns a list of indices representing the text.\n",
     "Finally, I use list comprehensions to apply this function to all entries in the training and testing datasets.\n",
     "After executing this code, train_indices and test_indices will be lists of lists, where each inner list is a sequence of word indices corresponding to a sentence in your training and testing datasets, respectively. These are now ready to be padded and then used for training your PyTorch model.\n"
    ]
