finished notebooks story

--- a/1.Simple Model Training.ipynb
+++ b/1.Simple Model Training.ipynb
@@ -96,9 +96,7 @@
     "Also handle unknown labels, print a list of classes in the data\n",
     "\n",
     "### Text to Index Lists\n",
-    "The text_to_indices function takes a string of text and the word_to_index dictionary.\n",
-    "Finally, I use list comprehensions to apply this function to all entries in the training and testing datasets.\n",
-    "After executing this code, train_indices and test_indices will be lists of lists, where each inner list is a sequence of word indices corresponding to a sentence in your training and testing datasets, respectively. These are now ready to be padded and then used for training your PyTorch model.\n"
+    "The text_to_indices function takes a string of text and the word_to_index dictionary. I use list comprehensions to apply this function to all entries in the training and testing datasets. I pad them and then use for training your PyTorch model.\n"
    ]
   },
   {
@@ -399,8 +397,8 @@
     "vocab_size is the number of unique words in your vocabulary.\n",
     "embedding_dim is the number of dimensions for each word embedding.\n",
     "IntentClassifierLSTM is a basic PyTorch model class with an embedding layer and LSTM.\n",
-    "The forward method defines how data passes through the model. In this simple example, it only passes through the embedding layer.\n",
-    "Finally, an example input is passed through the model to obtain embeddings. The input should be a tensor of token indices, like the output of your padding step.\n",
+    "The forward method defines how data passes through the model. \n",
+    "The input is a tensor of token indices, like the output of your padding step.\n",
     "This setup will initialize the embeddings randomly, and they will be updated during training. If you have pre-trained embeddings that you want to use, you can initialize the nn.Embedding layer with these pre-trained weights. "
    ]
   },
@@ -462,7 +460,7 @@
    },
    "source": [
     "## Training and Evaluation\n",
-    "Implement a training loop for the model. You can use any optimizer and loss function of your choice. You can also use any other metric that you think is suitable for the comparison."
+    "I Implement a training loop for the model. One can use any optimizer and loss function of your choice. You can also use any other metric that you think is suitable for the comparison."
    ]
   },
   {
