finished notebooks story

--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "#    Hyperparameter Tuning for Intent Classification using LSTM with Attention Mechanism\n",
-    "This notebook is 2nd part of the Ultimate AI Challenge. In the previous notebook, we trained a LSTM Model with Attention Mechanism for Intent Classification on the ATIS dataset. In this notebook, we perform a hyper parameter optimization to learn the best parameters for the model and also log our experiments using an ML server, e.g. MLFlow. Propreitart clouds already use experiment logging, model registry and deployment services, e.g. Vertex AI in GCP, Azure ML and Amazon Sagemaker. I have worked in Vertex AI and Azure ML. MLflow + Optuna is a good open source and scalable alternative to them. We use Optuna for hyperparameter tuning and MLflow for experiment tracking and model registry. Model Serving is done through pytorch save and load methods. To avoid pickling and version issues, we can also use model state dictionaries. The notebook is divided into the following sections:\n",
+    "This notebook is 2nd part of the Ultimate AI Challenge. In the previous notebook, I trained a LSTM Model with Attention Mechanism for Intent Classification on the ATIS dataset. In this notebook, I perform a hyper parameter optimization to learn the best parameters for the model and also log our experiments using an ML server, e.g. MLFlow. Propreitart clouds already use experiment logging, model registry and deployment services, e.g. Vertex AI in GCP, Azure ML and Amazon Sagemaker. I have worked in Vertex AI and Azure ML. MLflow + Optuna is a good open source and scalable alternative to them. I use Optuna for hyperparameter tuning and MLflow for experiment tracking and model registry. Model Serving is done through pytorch save and load methods. To avoid pickling and version issues, one can also use model state dictionaries. The notebook is divided into the following sections:\n",
     "1. Data Preparation\n",
     "2. Hyperparameter Tuning\n",
     "3. Model Training and Evaluation\n",
@@ -147,14 +147,14 @@
    },
    "source": [
     "## Hyperparameter Tuning\n",
-    "The Model that we are using for the hyperparameter tuning is the IntentClassifierLSTMWithAttention. The hyperparameters that we are tuning are:\n",
+    "The Model I am using for the hyperparameter tuning is the IntentClassifierLSTMWithAttention. The hyperparameters are:\n",
     "1. Learning rate : 1e-3 to 1e-1\n",
     "2. Hidden dimension : 32, 64, 128, 256\n",
     "3. Embedding dimension : 64, 128, 256, 512\n",
     "4. Dropout rate : 0.1 to 0.5\n",
     "5. Weight decay : 1e-6 to 1e-3\n",
     "\n",
-    "The objective function is the average validation accuracy over 5 folds. The best model is the one with the highest average validation accuracy. Note our test data is completely hidden to the accuracy optimizer of optuna. We can choose any metric to optimize, for example minimization of loss, etc.."
+    "The objective function is the average validation accuracy over 5 folds. The best model is the one with the highest average validation accuracy. Note our test data is completely hidden to the accuracy optimizer of optuna. One can choose any metric to optimize, for example minimization of loss, etc.."
    ]
   },
   {
@@ -233,7 +233,7 @@
     "## Optuna Study for Hyperparameter Optimization\n",
     "Create an experiment in MLflow and run the hyperparameter tuning experiment. The best model is the one with the highest average validation accuracy. You can install the mlflow and optuna using pip install. To start mlflow server, I used the following command\n",
     "`mlflow server --backend-store-uri=sqlite:///mlrunsdb15.db --default-artifact-root=file:mlruns --host 127.0.0.1 --port 1234`\n",
-    "Once started, it creates mlruns directory in project root and also a db in the root to log the progress, store models and experiments. In practise, it is installed on a server, and http requests are sent to the server. Anyhow pay close attention to the  Here we keep it simple. Optuna also creates a db to store it's studies. Here we choose 20 tries. For 5 folds cross validation, and 5 epochs each, the study takes less than an hour my M1 machine. Optuna uses Bayesian Parameter Optimization."
+    "Once started, it creates mlruns directory in project root and also a db in the root to log the progress, store models and experiments. In practise, it is installed on a server, and http requests are sent to the server. Anyhow pay close attention to the  Here I keep it simple. Optuna also creates a db to store it's studies. Here I choose 20 tries. For 5 folds cross validation, and 5 epochs each, the study takes less than an hour my M1 machine. Optuna uses Bayesian Parameter Optimization."
    ]
   },
   {
@@ -847,7 +847,7 @@
    },
    "source": [
     "## Best Model Training and Evaluation\n",
-    "Once we find the best set of hyper parameters, you can open mlflow on tracking uri, e.g. in my case , I set http://127.0.0.1:1234. Also if you install optuna-dashboard, you can see very nice visualizations and get very detailed insights on hyperparameter space, their importance, and why some combinations work more than others. I invite to try it. Tune the best model with a larger number of epochs and evaluate it on the test set. You can reload an optuna study from its' db later to get the best parameters and train a model."
+    "Once I find the best set of hyper parameters, you can open mlflow on tracking uri, e.g. in my case , I set http://127.0.0.1:1234. Also if you install optuna-dashboard, you can see very nice visualizations and get very detailed insights on hyperparameter space, their importance, and why some combinations work more than others. I invite to try it. Tune the best model with a larger number of epochs and evaluate it on the test set. You can reload an optuna study from its' db later to get the best parameters and train a model."
    ]
   },
   {
@@ -926,7 +926,7 @@
    },
    "source": [
     "## Visualize the results\n",
-    "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. We can use these visualizations to analyze the results of the hyperparameter tuning experiment."
+    "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. I use these visualizations to analyze the results of the hyperparameter tuning experiment."
    ]
   },
   {
@@ -1072,8 +1072,15 @@
     "### Next Step for model improvements\n",
     "\n",
     "Visualize the impact of Attentions and Embeddings\n",
-    "One can visualize how attention and embeddings are playing but in the interest of time, we leave it to laters"
+    "One can visualize how attention and embeddings are playing but in the interest of time, I will not much further into improvment of training mechanism. I will shift to model evaulation and performance monitoring in production mode in the next notebook."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
