finished notebooks story

--- a/1.Simple Model Training.ipynb
+++ b/1.Simple Model Training.ipynb
@@ -96,7 +96,7 @@
     "Also handle unknown labels, print a list of classes in the data\n",
     "\n",
     "### Text to Index Lists\n",
-    "The text_to_indices function takes a string of text and the word_to_index dictionary. I use list comprehensions to apply this function to all entries in the training and testing datasets. I pad them and then use for training your PyTorch model.\n"
+    "The text_to_indices function takes a string of text and the word_to_index dictionary. I use list comprehensions to apply this function to all entries in the training and testing datasets. I pad them and then use for training a PyTorch model.\n"
    ]
   },
   {
@@ -248,11 +248,13 @@
   {
    "cell_type": "markdown",
    "id": "e05c849b-3dc0-4dcd-862a-3ad69682047e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Vectorized Data\n",
     "\n",
-    "Our data is now vectorized. This is the first step for getting to an NLP model. We can start playing with models now. The first step is to build an embedding model. "
+    "Atis data is now vectorized. This is the first step for getting to an NLP model. We can start playing with models now. The first step is to build an embedding model. "
    ]
   },
   {
@@ -317,7 +319,8 @@
    "id": "6fb73f06-014a-4a44-9355-cf0ff793b0a0",
    "metadata": {},
    "source": [
-    "Great!. The Embeddings are working. , if you want to use advance embeddings, you can also use pretrained embeddings, including contextualized embeddings from the task. Lets refine our Embedding Model by adding an Attention Layer. Attention Layer has an O(n2logn) complexity in terms of hidden dimensions of LSTM. It takes every combination of hidden dimensiton and finds their correlation through dot products in a matrix multiplication. This is why it is very good at focusing on different parts of input and finding their relationships."
+    "Great!. The Embeddings are working. , if you want to use advance embeddings, you can also use pretrained embeddings, including contextualized embeddings from the task. Lets refine the\n",
+    "Embedding Model by adding an Attention Layer. Attention Layer has an O(n2logn) complexity in terms of hidden dimensions of LSTM. It takes every combination of hidden dimensiton and finds their correlation through dot products in a matrix multiplication. This is why it is very good at focusing on different parts of input and finding their relationships."
    ]
   },
   {
